stremio/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-stremio-web
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
spec:
  rules:
  - host: media.pi
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-web-stremio
            port:
              name: http


---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: public-stremio-web
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`media.shivanshs9.me`)
      kind: Rule
      services:
        - name: svc-web-stremio
          port: http
  tls:
    secretName: tls-pi-shivanshs9-me
